--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       args:
-        user: sammy
+        user: www-data
         uid: 1000
       context: ./
       dockerfile: Dockerfile
@@ -13,8 +13,55 @@ services:
     working_dir: /var/www/
     volumes:
       - ./:/var/www
+      - composer_cache:/home/.sammy/.composer
     networks:
       - travellist
+    environment:
+      APP_ENV: local
+      CONTAINER_ROLE: app
+  scheduler:
+    # build:
+    #   args:
+    #     user: www-data
+    #     uid: 1000
+    #   context: ./
+    #   dockerfile: Dockerfile
+    image: travellist
+    container_name: travellist-scheduler
+    depends_on:
+      - app    
+    restart: unless-stopped
+    working_dir: /var/www/
+    volumes:
+      - ./:/var/www
+      - composer_cache:/home/.sammy/.composer
+    networks:
+      - travellist
+    environment:
+      APP_ENV: local
+      CONTAINER_ROLE: scheduler
+  queue:
+    image: travellist
+    container_name: travellist-queue
+    depends_on:
+      - app
+    volumes:
+      - ./:/var/www
+      - composer_cache:/home/.sammy/.composer
+    environment:
+      APP_ENV: local
+      CONTAINER_ROLE: queue
+      CACHE_DRIVER: redis
+      SESSION_DRIVER: redis
+      QUEUE_DRIVER: redis
+      REDIS_HOST: redis
+
+  redis:
+    container_name: travellist-redis
+    image: redis:4-alpine
+    ports:
+      - 16379:6379
+
 
   db:
     image: mysql:5.7
@@ -47,3 +94,5 @@ services:
 networks:
   travellist:
     driver: bridge
+volumes:
+  composer_cache:
